Renamed JsTreeModelFactory to KnockoutJsTreeModelFactory, and created a PresenterJsTreeModelFactory to complement it. Updated the dashboard workbench page to use the PresenterJsTreeModelFactory, since otherwise we don't have any working examples of this code.

--- a/brjs-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
+++ b/brjs-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
@@ -25,9 +25,9 @@
 			}
 
 			function addModelViewer( model, workbench ) {
-				var JsTreeModelFactory = require('br/knockout/workbench/JsTreeModelFactory');
+				var KnockoutJsTreeModelFactory = require('br/knockout/workbench/KnockoutJsTreeModelFactory');
 				var PresentationModelViewer = require('br/knockout/workbench/PresentationModelViewer');
-				var presentationModelViewer = new PresentationModelViewer(JsTreeModelFactory.createTreeModelFromKnockoutViewModel(model));
+				var presentationModelViewer = new PresentationModelViewer(KnockoutJsTreeModelFactory.createTreeModelFromKnockoutViewModel(model));
 				workbench.addToRightWing(presentationModelViewer, "Visualise Knockout View Model", false);
 			}
 
