--- a/brjs-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/workbench/resources/style/workbench.css
+++ b/brjs-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/workbench/resources/style/workbench.css
@@ -15,3 +15,12 @@
 .serviceModeConfig .controls {
 	margin-left:25px;
 }
+
+.workbench-component {
+	overflow:auto;
+	position: absolute;
+	top: 300px;
+	right: 9px;
+	width: 250px;
+	height: 320px;
+}
