Updated the new presentation model viewer to have the same style as the old one.

--- a/brjs-sdk/workspace/sdk/libs/javascript/br-knockout/src/br/knockout/workbench/presentation-model-viewer.css
+++ b/brjs-sdk/workspace/sdk/libs/javascript/br-knockout/src/br/knockout/workbench/presentation-model-viewer.css
@@ -1,8 +1,13 @@
-.workbench-component #tree-view.jstree {
+#presentation-model-viewer #tree-view {
+	background-color: white;
+	border: 1px solid #333;
+}
+
+#presentation-model-viewer #tree-view.jstree {
 	font-size:10px;
 	overflow:hidden;
 }
 
-.jstree .jstree-leaf .jstree-anchor .jstree-icon {
+#presentation-model-viewer .jstree-leaf .jstree-anchor .jstree-icon {
 	background-position-x: -195px;
 }
