Ensure that there is margin before the first paragraph, since the one-liner at the top of each class and method annotation is not usually placed wihtin a <p/> tag.

--- a/brjs-sdk/build-resources/includes/sdk/jsdoc-toolkit-resources/brjs-template/static/styles/styles.css
+++ b/brjs-sdk/build-resources/includes/sdk/jsdoc-toolkit-resources/brjs-template/static/styles/styles.css
@@ -406,6 +406,10 @@ nav ul a {
     border-bottom: 1px solid #F0F0F0;
 }
 
+.description p, .class-description p {
+	margin-top: 10px;
+}
+
 table.params {
     width: 100%;
     margin: 0px 0px 8px 0px;
