--- a/brjs-sdk/build-resources/includes/sdk/jsdoc-toolkit-resources/brjs-template/tmpl/container.tmpl
+++ b/brjs-sdk/build-resources/includes/sdk/jsdoc-toolkit-resources/brjs-template/tmpl/container.tmpl
@@ -60,6 +60,8 @@
     <?js } ?></h2>
     <?js if (doc.classdesc) { ?>
         <div class="class-description"><?js= doc.classdesc ?></div>
+    <?js } else if (doc.kind === 'module' && doc.module && doc.module.classdesc) { ?>
+        <div class="class-description"><?js= doc.module.classdesc ?></div>
     <?js } ?>
 </header>
 
